--- a/apps/static/assets/package.json
+++ b/apps/static/assets/package.json
@@ -1,35 +1,24 @@
 {
-    "name": "@themesberg/volt-bootstrap-5-dashboard",
-    "version": "1.4.1",
-    "description": "Volt - Bootstrap 5 Dashboard",
+    "name": "generic-compilation-script",
+    "version": "1.0.0",
+    "description": "Generic Builder",
     "main": "gulpfile.js",
-    "author": "Themesberg",
+    "author": "AppSeed",
     "keywords": [
-        "bootstrap",
-        "bootstrap5",
-        "bootstrap-5",
-        "bootstrap 5",
-        "bootstrap 5 dashboard",
-        "bootstrap 5 admin dashboard",
-        "dashboard vanilla js",
-        "admin dashboard vanilla js",
-        "bootstrap template vanilla js",
-        "bootstrap 5 chart",
-        "bootstrap 5 datepicker",
-        "bootstrap 5 beta 1"
+        "css",
+        "sass",
+        "gulp",
+        "web"
     ],
-    "homepage": "https://themesberg.com/product/admin-dashboard/volt-bootstrap-5-dashboard",
-    "bugs": {
-        "url": "https://github.com/themesberg/volt-bootstrap-5-dashboard/issues"
-    },
+    "homepage": "https://appseed.us",
     "repository": {
         "type": "git",
-        "url": "https://github.com/themesberg/volt-bootstrap-5-dashboard"
+        "url": "https://github.com/app-generator"
     },
-    "license": "https://github.com/themesberg/volt-bootstrap-5-dashboard/blob/master/LICENSE.md",
-    "dependencies": {
-        "bootstrap": "5.0.1"
+    "bugs": {
+        "email": "support@appseed.us"
     },
+    "license": "MIT License",
     "devDependencies": {
         "browser-sync": "^2.27.4",
         "del": "^6.0.0",
